testdata/baselines/reference/submodule/conformance/jsDeclarationsExportDoubleAssignmentInClosure.errors.txt
index.js(3,5): error TS1231: An export assignment must be at the top level of a file or module declaration.
index.js(3,5): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
index.js(3,5): error TS2309: An export assignment cannot be used in a module with other exported elements.
index.js(3,22): error TS2631: Cannot assign to '"index"' because it is a namespace.
index.js(3,42): error TS2300: Duplicate identifier 'o'.
index.js(4,30): error TS2304: Cannot find name 'create'.
index.js(4,37): error TS2304: Cannot find name 'base'.
index.js(4,45): error TS2304: Cannot find name 'defineProperties'.
index.js(4,73): error TS2304: Cannot find name 'descriptors'.


==== index.js (9 errors) ====
    // @ts-nocheck
    function foo() {
        module.exports = exports = function (o) {
        ~~~~~~
!!! error TS1231: An export assignment must be at the top level of a file or module declaration.
        ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                         ~~~~~~~
!!! error TS2631: Cannot assign to '"index"' because it is a namespace.
                                             ~
!!! error TS2300: Duplicate identifier 'o'.
            return (o == null) ? create(base) : defineProperties(Object(o), descriptors);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                 ~~~~~~
!!! error TS2304: Cannot find name 'create'.
                                        ~~~~
!!! error TS2304: Cannot find name 'base'.
                                                ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'defineProperties'.
                                                                            ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'descriptors'.
        };
    ~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
        const m = function () {
            // I have no idea what to put here
        }
        exports.methods = m;
    }
    